Fix container mobile spacing

--- a/src/implementations/vanilla/components/site-header/site-header-eu.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-eu.scss
@@ -55,8 +55,8 @@ $_search-width-xl: 31.5rem;
 .ecl-site-header__container {
   display: flex;
   flex-direction: column;
-  padding-bottom: map.get(theme.$spacing, '2xs');
-  padding-top: map.get(theme.$spacing, '2xs');
+  padding-bottom: map.get(theme.$spacing, 'xs');
+  padding-top: map.get(theme.$spacing, 'xs');
 }
 
 .ecl-site-header__top {
